common-branch/circle-4/ft_services/srcs/phpmyadmin-deployment.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: phpmyadmin
spec:  
  selector:  
    app: phpmyadmin 
  ports:  
    - protocol: TCP  
      port: 5000 

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin 
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - image: my-phpmyadmin
          imagePullPolicy: Never
          name: phpmyadmin
          ports:
            - containerPort: 5000
              hostPort: 5000
